# ufltogpu-artifacts

./: LICENSE.txt  README.md  pyproject.toml  timings_recorder.py
data/: firedrake-install  petsc_kepler.patch  results.db
ufltogpu_artifacts/: barplotter.py  constants.py  constants_verifier.py  core.py  num_parameters_plotter.py  plot_percent_roofline.py  sql_utils.py  timings_recorder.py  weak_forms.py
