[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=63",
]

[project]
name = "ufltogpu_artifacts"
version = "2024.0"
description = "Reproducer toolkit for UFL-to-GPU: Near the Roofline."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kaushik Kulkarni", email = "kaushikggg@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "numpy",
]

[project.urls]
Documentation = "https://github.com/kaushikcfd/ufltogpu_artifacts"
Homepage = "https://github.com/kaushikcfd/ufltogpu_artifacts"

[tool.setuptools.packages.find]
include = [
    "ufltogpu_artifacts*",
]

[tool.setuptools.package-dir]
# https://github.com/Infleqtion/client-superstaq/pull/715
"" = "."

[tool.setuptools.package-data]
pytools = [
    "py.typed",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
preview = true
extend-select = [
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # flake8-isort
    "N",    # pep8-naming
    "Q",    # flake8-quotes
    "W",    # pycodestyle
    "NPY",   # numpy
    "RUF",
    "UP",
]
extend-ignore = [
  "E226",
  "E241",
  "E242",
  "E265",
  "N802",
  "E402",
  "N806",
  "N814",
  "N817",
  "C90",

  # numpy random generators---disable for now
  "NPY002",
]

allowed-confusables = [
  "∪", # union
  " ", # nbsp
  ]

[tool.ruff.lint.per-file-ignores]
"examples/advection.py" = ["B023"]
"test/test_linalg.py" = ["N806"]
"doc/*.py" = ["I002"]
"examples/*.py" = ["I002"]

[tool.ruff.lint.isort]
known-first-party = ["firedrake", "PyOP2", "ufl", "loopy"]
known-local-folder = ["ufltogpu_artifacts"]
lines-after-imports = 2
combine-as-imports = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"
multiline-quotes = "double"

[[tool.mypy.overrides]]
module = [
  "islpy",
  "loopy.*",
  "pymbolic.*",
  "pygments.*",
  "mako.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "pytato.transform",
  "pytato.scalar_expr",
]
allow_subclassing_any = true


[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]

[tool.typos.default.extend-words]
# like the numpy function, array range
arange = "arange"

[tool.typos.files]
extend-exclude = [
]